# mlops-docker-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  predict.py  pyproject.toml  train.py
.github/workflows/: ci.yml
tests/: requirements.txt  test_train.py
